docs: update swagger docs and refactor code
